# stonk

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE_RUN_SUMMARY.md  LICENSE  README.md  REBASE_PLAN.md  RUNBOOK.md  TUTORIAL.md  pyproject.toml  run.command  run.ps1  run.sh  speculation_cheat_sheet.txt
.claude/: launch.json  ralph-loop.local.md
.github/workflows/: offline-tests.yml
assets/: stonk.icns
configs/: aggressive.yaml  default.yaml  live.yaml  paper.yaml
dev/: ARCHITECTURE.md  CONTROL_CENTER_V3.md  DECISIONS.md  DECISIONS.txt  NN_REPAIR_COMPLETION_REPORT_07.15.2026.md  NN_REPAIR_IMPLEMENTATION_PLAN_07.15.2026.md  NN_REPAIR_STAGE_B_REPORT_07.15.2026.md  PLAN.md  PROBLEM_ANALYSIS_07.15.2026.md  PRODUCT.md  PROGRESS.md  REBASE_PLAN.md  RELEASE_CHECKLIST.txt  ROADMAP.md  SPRINT_PLAN.txt  SPRINT_PLAN_R_07.17.2026.md  STATE.txt  UPGRADE_ROADMAP.md  V4_PLAN.md
dev/archive/: CURRENT_PLAN.md  NN_REPAIR_IMPLEMENTATION_PLAN_07.15.2026.md  ROADMAP.md
dev/reports/: backtest_aggressive.json  backtest_v1.json  backtest_v2.json  backtest_v3.json
logs/: README.md
scripts/: bridge_prompt.md  build_stonk_app.sh  check_health.py  install_cron.sh  install_service.sh  restart_live.sh  stonk_app.sh
specforge/: __init__.py  ai.py  app.py  attribution.py  backtest.py  bars_audit.py  cli.py  config.py  data.py  engine.py  ensemble.py  evidence.py  execution.py  forecast.py  graph.py  health.py  hypothesis.py  intelligence.py  models.py  montecarlo.py  neural.py  news_sources.py  portfolio.py  quotes.py  regime.py  research.py  risk.py  steering.py  store.py  strategy.py  universe.py
specforge/broker/: __init__.py  base.py  bridge.py  paper.py  robinhood_mcp.py
specforge/ml/: __init__.py  bakeoff.py  facts.py  (+7 more)
static/: dashboard.html
tests/: conftest.py  test_ai_attribution.py  test_bars_audit.py  test_bridge.py  test_config_security.py  test_dashboard_contract.py  test_evidence.py  test_fundamentals.py  test_graph.py  test_gui.py  test_health_ops.py  test_hypothesis.py  test_intelligence_strategy.py  test_neural.py  test_neural_reliability.py  test_news_sources.py  test_nn_repair.py  test_pipeline.py  test_quotes.py  test_rebalance.py  test_risk.py  test_steering.py  test_universe_research.py
(+18 files in other folders)
