[project]
name = "stonk-terminal"
version = "0.1.0"
description = "Stonk Terminal — autonomous, risk-bounded market speculation engine"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "apscheduler",
    "pyyaml",
    "yfinance",
    "mcp",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
stonk = "specforge.cli:main"
# Legacy alias: existing services and operator muscle memory keep working.
specforge = "specforge.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["specforge*"]
